--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
 
     <title>Image Recognition</title>
 
@@ -61,11 +60,11 @@
 
             <div class="form-group">
                 <label for="exampleInputFile">File input</label>
-                <input type="file" id="exampleInputFile">
+                <input type="file" id="inputFile">
 
             </div>
 
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button class="btn btn-default" onclick="uploadImage()">Submit</button>
         </form>
     </div>
 </div>
@@ -98,6 +97,30 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="{{ STATIC_URL }}/static/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script>
+    function uploadImage() {
+        formdata = new FormData();
+        var file = $('input#inputFile')[0].files[0];
+        if (file) {
+            formdata.append("image", file);
+            $.ajax({
+                url: {% url 'upload_image' %},
+                type: "POST",
+                data: formdata,
+                success: function () {
+                    alert('uploaded')
+                }
+            });
+
+
+        }
+
+        else {
+            alert('kindly insert image first')
+        }
+
+    }
+</script>
 
 </body>
 </html>
