--- a/templates/index.html
+++ b/templates/index.html
@@ -56,16 +56,16 @@
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a
             jumbotron and three supporting pieces of content. Use it as a starting point to create something more
             unique.</p>
-        <form>
 
-            <div class="form-group">
-                <label for="exampleInputFile">File input</label>
-                <input type="file" id="inputFile">
 
-            </div>
+        <div class="form-group">
+            <label for="exampleInputFile">File input</label>
+            <input type="file" id="inputFile">
 
-            <button class="btn btn-default" onclick="uploadImage()">Submit</button>
-        </form>
+        </div>
+
+        <button class="btn btn-default" onclick="uploadImage()">Submit</button>
+
     </div>
 </div>
 
@@ -99,19 +99,19 @@
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script>
     function uploadImage() {
-        formdata = new FormData();
+
         var file = $('input#inputFile')[0].files[0];
+        formdata = new FormData();
         if (file) {
             formdata.append("image", file);
             $.ajax({
-                url: {% url 'upload_image' %},
                 type: "POST",
+                url: 'upload/',
                 data: formdata,
-                success: function () {
-                    alert('uploaded')
-                }
-            });
+                contentType: false,
+                processData: false
 
+            });
 
         }
 
