--- a/templates/index.html
+++ b/templates/index.html
@@ -76,6 +76,9 @@
 
         </div>
         <div class="col-md-4">
+            <img id="uploadedImage" src="" alt="" class="img-rounded" style="width: 300px; height: 300px">
+            <p id="labelImage"></p>
+            <p id="confidenceImage"></p>
 
         </div>
         <div class="col-md-4">
@@ -109,8 +112,17 @@
                 url: 'upload/',
                 data: formdata,
                 contentType: false,
-                processData: false
+                processData: false,
+                success: function (res) {
+                    var result = JSON.parse(res);
+                    console.log(result)
 
+
+                    $("#uploadedImage").prop("src", result['path'])
+                    $("#labelImage").text('label: '+result['label']);
+                    $("#confidenceImage").text('confidence: '+result['confidence']);
+
+                },
             });
 
         }
