--- a/templates/index.html
+++ b/templates/index.html
@@ -52,12 +52,8 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a
-            jumbotron and three supporting pieces of content. Use it as a starting point to create something more
-            unique.</p>
-
-
+        <h1>MNIST Character Recognition Demo!</h1>
+        <p>Simply upload the image from MNIST dataset and click submit. The result includes both image label and the confidence!</p>
         <div class="form-group">
             <label for="exampleInputFile">File input</label>
             <input type="file" id="inputFile">
